create the boxes from javascript, add function and UI to the project

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>Etch a Sketch</title>
 </head>
 <body>
-    <container class="main-box">
+    <button class="size-btn">Input Row and Column Number Between 1 and 100</button>
+    <div class="container">
         
-    </container>
-
+    </div>
     <script src="./js/script.js"></script>
 </body>
 </html>
