--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Etch a Sketch</title>
 </head>
 <body>
+    <header>
+        <h1>Etch a Sketch</h1>
+    </header>
     <button class="size-btn">Input Row and Column Number Between 1 and 100</button>
     <div class="container">
         
